quartz/styles/custom.scss
/* ... */
figure > img {
  z-index: -1;
}

figcaption {
  margin-top: calc(0.5 * $base-margin);
  position: relative;
  max-width: 90%;
  margin-left: auto;
  margin-right: auto;
  text-wrap: balance;
}

img,
figcaption,
.float-right {
  text-align: center;
  color: var(--midground-strong);
  font-size: var(--font-size-minus-1); /* smaller than the surrounding text */
}

.float-right {
  margin: calc(1.5 * $base-margin) 0 calc(1.5 * $base-margin) calc(2 * $base-margin);

  & img,
  img.float-right {
    margin-left: auto;
    margin-right: auto;
    display: block;
  }

  float: right;
  max-width: 45%;
}

.testimonial-maybe-negative-margin {
  margin-top: calc(-7 * $base-margin);

  @media all and (width <= 700px) {
    margin-top: initial;
  }
}

.no-select {
  -webkit-user-drag: none;
  user-select: none;
}

.book-citation {
  font-style: italic;
}

.collapsible {
  & .collapsible-title {
    display: flex;

    & h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    p {
      margin-top: 0;
      margin-bottom: 0;
    }
  }

  & .content {
    max-height: 0;
    overflow: hidden;
    transition: max-height $transition-duration-quick ease-out;
  }
}

svg.fold-icon {
  --icon-size: 18px;

  display: inline-flex; /* Use inline-flex for better alignment */
  align-items: center;
  justify-content: center;
  margin: 0;
  margin-left: calc(0.5 * $base-margin);
  margin-top: 0.25rem;
  cursor: pointer;
  width: var(--icon-size);
  height: var(--icon-size);
  fill: var(--midground); /* Set the default color here */
  transition: transform $transition-duration-quick ease-out; /* Add a smooth transition */
  transform: rotate(-90deg); /* Initial 90-degree rotation */

  &[aria-expanded="true"] {
    transform: rotate(0deg); /* Rotate 180 degrees when expanded */
  }
}

hr {
  max-width: 97.5%; // Looks weird if it extends all the way to the right
  margin: calc(3 * $base-margin) 0;
  margin-left: auto;
  margin-right: auto;
}

.right {
  & h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  a,
  li {
    // Don't make popover text gray
    &:not(* .popover-inner *) {
      color: var(--midground);
    }
  }

  & #content-meta {
    font-size: var(--font-size-minus-1);
    margin-bottom: 0;
  }
}

.authors {
  & p {
    color: var(--midground);
    margin-top: 0;
    text-indent: -0.2rem;
    padding-left: 0.2rem;
    line-height: 1.25rem;

    & a {
      color: inherit;
    }

    &:not(:last-child) {
      margin-bottom: 0;
    }
  }

  & .publication-str {
    font-variant-numeric: lining-nums;
  }
}

img,
video {
  width: 100%;
  height: auto; // override manual heights
  max-width: 100%;
  margin-bottom: calc(2 * $base-margin);
  margin-top: $base-margin;

  article > p &,
  article > &,
  article > figure > &:not(.float-right),
  .video-container &:not(.float-right),
  figure > &:not(.float-right) {
    margin-left: auto;
    margin-right: auto;
    display: block;
  }
}

// don't apply in fullscreen (backdrop)
[data-theme="light"] img,
[data-theme="light"] video:not(:has(::backdrop)) {
  mix-blend-mode: multiply;
}

img {
  margin-top: $base-margin;

  &.inline-img {
    display: inline;
    width: 0.9rem;
    vertical-align: middle;
    margin: 0;
    margin-left: 0.05rem;
    margin-right: 0.025rem;
    margin-bottom: 0.1rem;
  }

  &.white-when-dark {
    :root[data-theme="dark"] & {
      background-color: white;
    }
  }
}

// Ordering the z stacks
#left-sidebar {
  z-index: 1;
  background-color: var(--background);

  &:has(#navbar.hide-above-screen) {
    background-color: transparent;
  }
}

svg {
  margin-bottom: $base-margin;
}

body.no-mix-blend-mode {
  & img,
  & video,
  & svg {
    mix-blend-mode: normal;
  }

  & #search-layout {
    [data-theme="light"] & img:not([src$=".svg"]),
    [data-theme="light"] & video {
      mix-blend-mode: multiply;
    }
  }
}

p > img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

img.emoji,
.theme-emoji {
  mix-blend-mode: normal !important;
}

img.emoji {
  display: inline;
  border-radius: 0; // Don't want to cut off corners
  height: 1em;
  width: 1em;
  margin: 0 0.05em 0 0.1em;
  vertical-align: -0.1em;
}

.theme-emoji {
  width: 100px;
  max-width: 100px;
  height: 100px;
  max-height: 100px;
  margin-top: 1rem;
}

.sequence-links {
  margin-bottom: calc(2 * $base-margin);
}

.sequence-links-divider {
  color: var(--midground-faint);
  height: calc(8 * $base-margin);
  margin-top: calc(2 * $base-margin);
  margin-left: $base-margin;
  margin-right: $base-margin;
  border-left-style: solid;
  border-left-width: 1px;
}

.sequence-links-post-navigation {
  width: 45%;
}

.sequence-nav {
  display: flex;
  justify-content: space-between;

  & a {
    flex: 0 0 auto;
  }

  & .prev-post {
    margin-right: auto;
  }

  & .next-post {
    margin-left: auto;
  }
}

// Fixing issue where eqn numbers overlap with katex math
//  https://github.com/KaTeX/KaTeX/issues/3066
.katex-html {
  .base {
    margin: 0 auto;
  }
}

// For some reason, the last one messes up katex sub on safari (eg https://turntrout.com/statistics-of-a-maze-solving-network#statistically-informed-impressions)
.vlist-r:last-of-type {
  display: none;
}

.katex-display .katex {
  padding-top: 1px; // Prevent exponents from clipping
}

.katex-html:has(span.tag) {
  display: flex !important;
}

.katex-display > .katex > .katex-html > .tag {
  position: relative !important;
  float: right;
  margin-left: 0.25rem;
}

// Spoilers (remark-spoiler)
.spoiler-container {
  position: relative;
  cursor: pointer;
  width: fit-content;
}

.spoiler-overlay {
  position: absolute;
  height: 90%; // Visually center the overlay
  width: 100%;
  color: var(--foreground);
  display: flex;
  align-items: center;
  justify-content: center;

  &::after {
    content: "Click to show";
  }
}

.spoiler-content {
  filter: blur(4px);
  opacity: 0.5;
  color: transparent;

  // Safari needs this
  & > * {
    filter: inherit;
  }
}
/* ... */

